--- a/backend/package.json
+++ b/backend/package.json
@@ -18,14 +18,14 @@
   "author": "Traffic Pulse Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.12.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "axios": "^1.6.2",
-    "multer": "^1.4.5-lts.1",
-    "compression": "^1.7.4"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
